--- a/homework1.html
+++ b/homework1.html
@@ -9,13 +9,45 @@
     <link rel="stylesheet" href="homework1.css"></a>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU=" crossorigin="anonymous"></script>
+
+    <script>
+        function order() {
+            let name = $('#orderName').val();
+            let address = $('#orderAdd').val();
+            let phoneNum = $('#orderPhone').val();
+            let selectOpt = $('#selectBox').val();
+
+            if (name == "") {
+                alert("이름을 입력해주세요");
+                $('#orderName').focus();
+                return
+            } else if (address == "") {
+                alert("주소를 입력해주세요");
+                $('#orderAdd').focus();
+                return
+            } else if (phoneNum == "") {
+                alert("전화번호를 입력해주세요");
+                $('#orderPhone').focus();
+                return
+            } else if (selectOpt == "") {
+                alert("수량을 입력해주세요");
+                $('#selectBox').focus();
+            } else {
+                alert("주문 완료");
+            }
+        }
+    </script>
+
 </head>
 
 <body>
     <div class="content">
         <img src="https://store.storeimages.cdn-apple.com/8756/as-images.apple.com/is/ipad-pro-12-11-gallery-5?wid=4056&hei=2400&fmt=jpeg&qlt=95&op_usm=0.5,0.5&.v=1539279699888"
             alt="ipadpro" width="500px" height="250px">
-        <p style="font-size:30px; font-weight:bold">iPad Pro&nbsp;<span style="font-size:small">가격 : 935,000원/개</span></p>
+        <p style="font-size:30px; font-weight:bold">iPad Pro&nbsp;<span style="font-size:small">가격 : 935,000원/개</span>
+        </p>
         <p>스크린 한가득, 성능 한가득. Apple의 가장 앞선 기술이 집약된 완전히 새로운 설계로 탄생된 iPad Pro.iPad의 가능성에 대한 당신의 선입견을 송두리째 바꿔놓을 것입니다.</p>
 
 
@@ -23,40 +55,41 @@
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">주문자 이름</span>
             </div>
-            <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+            <input type="text" class="form-control" id="orderName" aria-label="Default"
+                aria-describedby="inputGroup-sizing-default">
         </div>
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">주소</span>
             </div>
-            <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+            <input type="text" class="form-control" id="orderAdd" aria-label="Default"
+                aria-describedby="inputGroup-sizing-default">
         </div>
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">전화번호</span>
             </div>
-            <input type="text" class="form-control" aria-label="Default" aria-describedby="inputGroup-sizing-default">
+            <input type="text" class="form-control" id="orderPhone" aria-label="Default"
+                aria-describedby="inputGroup-sizing-default">
         </div>
 
         <div class="input-group mb-3">
             <div class="input-group-prepend">
                 <span class="input-group-text" id="inputGroup-sizing-default">수량</span>
             </div>
-            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                ---수량을 선택하세요---
-            </button>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
-                <a class="dropdown-item" href="#">1개</a>
-                <a class="dropdown-item" href="#">2개</a>
-                <a class="dropdown-item" href="#">3개</a>
-                <a class="dropdown-item" href="#">4개</a>
-                <a class="dropdown-item" href="#">5개</a>
-            </div>
+            <select class="selectpPicker" id="selectBox" style="width:449px">
+                <option value="" selected>---수량을 선택해주세요---</option>
+                <option value="1">1개</option>
+                <option value="2">2개</option>
+                <option value="3">3개</option>
+            </select>
+
         </div>
-        <button type="button" class="btn btn-primary" style="padding-left:20px; padding-right:20px">주문하기</button>
+
+        <button type="button" class="btn btn-primary" onclick="order()"
+            style="padding-left:20px; padding-right:20px">주문하기</button>
     </div>
 </body>
 
